# leak-sweep

./: .gitattributes  .gitignore  MANIFEST.in  README.md  SECURITY.md  gitcheck.py  leak_sweep_reporting.py  national_id.py  personal.example.txt  pyproject.toml  setup.ps1  setup.sh  sweep.py
.github/workflows/: ci.yml  release.yml
tests/: test_gitcheck.py  test_national_id.py  test_sweep.py
