[build-system]
requires = [
    "setuptools==83.0.0; python_version >= '3.10'",
    "setuptools==82.0.1; python_version < '3.10'",
    "wheel==0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "leak-sweep"
dynamic = ["version"]
description = "Scan all your GitHub repos for leaked personal info (secrets, PII, national IDs) so you don't get doxxed."
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Laurent Zogaj" }]
keywords = ["gitleaks", "presidio", "pii", "privacy", "security", "secrets-detection", "doxxing", "github"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "presidio-analyzer>=2.2,<3",
    "phonenumbers>=9,<10",
    "python-stdnum>=2,<3",
    "spacy>=3.7,<3.9",
]

[project.optional-dependencies]
dev = [
    "build==1.5.0; python_version >= '3.10'",
    "pip-audit==2.10.1; python_version >= '3.10'",
    "pip-licenses==5.5.5",
    "pyright[nodejs]==1.1.411",
    "ruff==0.15.21",
    "setuptools==83.0.0; python_version >= '3.10'",
    "setuptools==82.0.1; python_version < '3.10'",
    "wheel==0.47.0",
]

[project.scripts]
leak-sweep = "sweep:main"
leak-sweep-gitcheck = "gitcheck:main"

[project.urls]
Repository = "https://github.com/26zl/leak-sweep"
Issues = "https://github.com/26zl/leak-sweep/issues"

[tool.setuptools]
py-modules = ["sweep", "gitcheck", "leak_sweep_reporting", "national_id"]

[tool.setuptools.dynamic]
version = { attr = "sweep.__version__" }

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["reports", "work"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = ["sweep.py", "gitcheck.py", "leak_sweep_reporting.py", "national_id.py", "tests"]
exclude = ["reports", "work"]
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.pip-licenses]
summary = true
allow-only = "Apache-2.0 AND CNRI-Python;Apache-2.0 OR BSD-2-Clause;BSD-3-Clause AND 0BSD AND MIT AND Zlib AND CC0-1.0;ISC License (ISCL);MPL-2.0 AND MIT;Mozilla Public License 2.0 (MPL 2.0);PSF-2.0;Python Software Foundation License;BSD-2-Clause;Apache-2.0;BSD License;BSD-3-Clause;Apache Software License;MIT;MIT License;MIT OR Apache-2.0;LGPL-2.1-or-later;GNU Lesser General Public License v2 or later (LGPLv2+);GNU Lesser General Public License v2 (LGPLv2)"
